@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <name>REST Assured Examples</name>
     <modules>
+        <module>scalatra-example</module>
         <module>scalatra-webapp</module>
         <module>rest-assured-itest-java</module>   
     </modules>
