@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Fixed an issue with XmlPath when parsing xml attributes and using findAll.
+* REST Assured now (finally) builds from Maven 3
 
 Change log 1.6.2 (2012-05-28)
 -----------------------------
